fix: 로그아웃 기능 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,10 @@ spring:
       maxFileSize: 10MB
       maxRequestSize: 10MB
 
+  redis:
+    host: localhost
+    port: 6379
+
 mail:
   smtp:
     auth: true
