--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,8 @@ dependencies {
 
 	testImplementation 'org.mockito:mockito-core:3.9.0'
 	testImplementation 'org.junit.jupiter:junit-jupiter:5.8.0'
+    testImplementation 'junit:junit:4.13.1'
+	testImplementation 'junit:junit:4.13.1'
 
 
 	compileOnly 'org.projectlombok:lombok'
